tests/negative/regression/r21.orng
// 
fn main() -> Int { 
    const x = while true { } // This should trip the timeout for the interpreter
    4
} 
